test/parsing/vass/parenthesis-less-function-string.chpl
proc int.x return 5;
var y = (1.1).x;
